REGRESSION (r177876): store.apple.com profile and cart icons are missing https://bugs.webkit.org/show_bug.cgi?id=146894

Patch by Antti Koivisto <antti@apple.com> on 2015-07-14
Reviewed by Myles C. Maxfield.

Source/WebCore:

If we had several @font-face rules for the same face covering overlapping ranges we
would only try to get glyphs from the first one. If it didn't have the glyph we wouldn't
try the other ones.

Test: fast/css/font-face-multiple-missing-glyphs.html

* platform/graphics/FontCascadeFonts.cpp:
(WebCore::FontCascadeFonts::glyphDataForVariant):
(WebCore::FontCascadeFonts::glyphDataForNormalVariant):

    Get GlyphData with one call.

* platform/graphics/FontRanges.cpp:
(WebCore::FontRanges::~FontRanges):
(WebCore::FontRanges::glyphDataForCharacter):

    Check that we actually have a glyph in the font for the character before returning it.

(WebCore::FontRanges::fontForCharacter):
(WebCore::FontRanges::fontForFirstRange):
* platform/graphics/FontRanges.h:
(WebCore::FontRanges::size):
(WebCore::FontRanges::rangeAt):

LayoutTests:

* fast/css/font-face-multiple-missing-glyphs-expected.html: Added.
* fast/css/font-face-multiple-missing-glyphs.html: Added.

Canonical link: https://commits.webkit.org/164998@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186809 268f45cc-cd09-0410-ab3c-d52691b4dbfc